# SubMerger

./: .gitignore  Foundations_of_Modern_Finance_I.md  Mathematical_Methods_for_Quantitative_Finance.md  Q&A.md  README-story.md  README.md  autosub.py  dir_srt.py  dir_vtt.py  example.sh  extract_srt.py  extract_ttml.py  extract_vtt.py  gptchunks.py  merge_txt_to_md.py  mp3autosub.py  out.md  p.cmd  p.ttml  requirements.txt  srt_dir2md.py  test.ipynb  vtt2srt.py  vtt_dir2srt_dir.py  vtt_to_srt.py  x.txt
.temp/: dir_custom.py  dir_srt2.py  dir_ttml.py  extract_srt.py  out.md
autosub/: pyproject.toml
example_output/: eekpeter.txt  inside.txt  output.md  risk.md  zizek.txt
missing-song/: song.ipynb
src/: paragraph_splitter.py
submerger/: main.py  pyproject.toml
submerger/.temp/: main.py
temp/: tes.ipynb
video2text/: main.py  pyproject.toml
